# obta-paper

./: .gitignore  CITATION.cff  README.md  gpu_launcher.sh  pyproject.toml
data/: diag_period_sw.nc  geo_proj_error_constant_sw.nc  geo_proj_error_equidistant_sw.nc  ob_vs_obta.nc  ramp_period_sw.nc  rossby_number_bound_sw.nc  rossby_number_sw.nc
notebooks/: closure_ramping_nh.ipynb  diag_period_sw.ipynb  example.ipynb  example_nh.ipynb  geo_proj_error_sw.ipynb  lateral_bounds.ipynb  ob_vs_obta.ipynb  ramp_period_sw.ipynb  rossby_number_nh.ipynb  rossby_number_sw.ipynb  vertical_bounds_nh.ipynb
scripts/: balancing_error_sw.py  closure_ramping.py  diag_period_sw.py  example_nh.py  example_shallow_water_jet.py  example_sw_jet.py  example_sw_random.py  example_sw_random_bound.py  geo_proj_error_constant_chunks_sw.py  geo_proj_error_equidistant_chunks_sw.py  ob_vs_obta_sw.py  ramp_period_sw.py  reference_balanced_state_sw.py  rossby_number_bound_sw.py  rossby_number_nh.py  rossby_number_sw.py  stratifications_nh.py  vertical_bounds_nh.py
src/obta_paper/: __init__.py  background_stratification.py  biharmonic_closure.py  diagnosed_imbalance.py  projection_deviations.py
src/obta_paper/initial_conditions/: __init__.py  nonhydro_jet.py  shallow_water_jet.py  shallow_water_random.py
