[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obta_paper"
version = "0.1.0"
authors = [
  { name="Silvano Gordian Rosenau", email="silvano.rosenau@uni-hamburg.de" },
]
description = "Experiments for the paper that introduces the optimal balance with time averaging method."
readme = "README.md"
keywords = []
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
  "lazypimp",
]
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Gordi42/obta_paper"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]
