[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "obta_paper"
version = "0.1.0"
authors = [
  { name="Silvano Gordian Rosenau", email="silvano.rosenau@uni-hamburg.de" },
]
description = "Experiments for the paper that introduces the optimal balance with time averaging method."
readme = "README.md"
keywords = []
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
  "lazypimp",
  "fridom",
  "matplotlib",
  "numpy",
  "sweepexp",
  "mpi4py",
]
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/Gordi42/obta_paper"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = [
  "--import-mode=importlib",
]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D105", "D107", "D211", "D212", "TD003"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["D103", "S101", "ANN001", "ANN201", "ANN205", "INP001", "SLF001", "D101", "D102"]
"__init__.py" = ["F401"]
